<resources>
    <string name="app_name">Java Graph</string>
    <string name="app_mainTitle">Probabilistic Calc</string>
    <string name="app_selector">Select Function</string>
    <string name="app_next">NEXT</string>
    <string-array name="functions_array">
        <item>Area Chart</item>
        <item>Find PI</item>
        <item>Numeric Calc</item>
        <item>Root</item>
    </string-array>

    <string name="app_calc">CALC</string>
    <string name="text_help_pi">PI:</string>
    <string name="text_help_points">Total points:</string>
    <string name="text_randomPoint">Random Point</string>
    <string name="text_rootValue">Root Value</string>
    <string name="text_rooting">Rooting:</string>
    <string-array name="numeric_array">
        <item>Bisection</item>
        <item>Tangent</item>
        <item>Rope</item>
        <item>Secant</item>
    </string-array>
    <string-array name="area_array">
        <item>Rectangle</item>
        <item>Trapezoid</item>
        <item>Random</item>
        <item>Simpson</item>
    </string-array>
    <string name="text_ANumeric">A:</string>
    <string name="text_BNumeric">B:</string>
    <string name="text_settings">settings</string>
    <string name="text_insertTotalpoint">Insert Total Point</string>
    <string name="text_rootNumeric">Root:</string>
    <string name="text_functionLabel">Function</string>
    <string name="text_labelA">Enter A</string>
    <string name="text_labelB">Enter B</string>
    <string name="text_animateChart">Animate Chart</string>
    <string name="text_settingD">Derivative Calculation</string>
    <string name="text_labelPoint">Enter Total Point</string>
    <string name="text_Area">Area:</string>
    <string name="text_subtendedArea">Subtended area</string>
    <string name="text_point">Point</string>
    <string name="text_hint_root">Input rooting</string>
    <string name="hintExpression">Enter your expression</string>

    <string name="license"><![CDATA[
      <h1> Grafici Java </h1>
      <p>

      Copyright © 2021  Mario Cosenza

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
     This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <a href="http://www.gnu.org/licenses"/>http://www.gnu.org/licenses</a>

        </p>
    <h1> Apache License 2.0 </h1>
    <h2>MPAndroidChart</h2>
        <p align="justify">
     Copyright 2020 Philipp Jahoda
         Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this software except in compliance with the License.
            You may obtain a copy of the License at <a href="http://www.apache.org/licenses/LICENSE-2.0"> http://www.apache.org/licenses/LICENSE-2.0 </a>
            Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License. </p>


    ]]></string>



</resources>