<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RootChart"
    android:background= "@drawable/app_background"
    >

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="339dp"
        android:layout_height="391dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="37dp"
        android:background="@drawable/chart_background"
        app:layout_constraintBottom_toTopOf="@+id/textViewRootValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="120dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="35dp"
        android:onClick="onButtonClick"
        android:text="@string/app_calc"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewRootValue"
        android:layout_width="245dp"
        android:layout_height="78dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineChart" />

    <EditText
        android:id="@+id/editTextRooting"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="59dp"
        android:ems="10"
        android:hint="@string/text_hint_root"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textViewRootValue"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="82dp"
        android:text="@string/text_rooting"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRoot" />

    <TextView
        android:id="@+id/textViewRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="54dp"
        android:text="@string/text_rootNumeric"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineChart" />

</androidx.constraintlayout.widget.ConstraintLayout>